[gd_scene load_steps=13 format=3 uid="uid://bo6a6drfgift2"]

[ext_resource type="Script" path="res://Classes/MainNode.gd" id="1_b3kv3"]
[ext_resource type="TileSet" uid="uid://clknfb6b2kcsg" path="res://tileset.tres" id="2_sxov8"]
[ext_resource type="Script" path="res://Classes/MyMap.gd" id="3_cnlk0"]
[ext_resource type="PackedScene" uid="uid://gap1ux4wn0k8" path="res://Classes/SliderWithLabel.tscn" id="4_s24k0"]
[ext_resource type="Script" path="res://Classes/HoverCellData.gd" id="5_miaey"]
[ext_resource type="PackedScene" uid="uid://b3hphamv1oy7y" path="res://Classes/GenerationHistory.tscn" id="6_l7l20"]
[ext_resource type="PackedScene" uid="uid://bj07rf0bt0u63" path="res://Classes/CollapsibleTilePlacer.tscn" id="7_jppps"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x43o4"]
bg_color = Color(0.169245, 0.169245, 0.169245, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true

[sub_resource type="Theme" id="Theme_r14dn"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_x43o4")

[sub_resource type="GDScript" id="GDScript_bgg2j"]
script/source = "extends Button

func _on_option_button_item_selected(index):
	if index >= 0:
		disabled = false;
	else:
		disabled = true;
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6se3"]
bg_color = Color(0.28485, 0.28485, 0.28485, 1)

[sub_resource type="Theme" id="Theme_pbcp7"]
Panel/styles/panel = SubResource("StyleBoxFlat_f6se3")

[node name="MainNode" type="Node2D" node_paths=PackedStringArray("collections", "generator")]
script = ExtResource("1_b3kv3")
collections = NodePath("TileCollections")
maps_png_files = Array[String](["res://tiles/seas.png", "res://tiles/roads.png"])
generator = NodePath("TileGenerator")

[node name="TileMapContainer" type="PanelContainer" parent="."]
offset_right = 576.0
offset_bottom = 644.0
theme = SubResource("Theme_r14dn")

[node name="Label" type="Label" parent="TileMapContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Produced TileMap"
horizontal_alignment = 1

[node name="TileMap" type="TileMap" parent="TileMapContainer"]
texture_filter = 1
position = Vector2(23, 39)
scale = Vector2(5, 5)
tile_set = ExtResource("2_sxov8")
format = 2
script = ExtResource("3_cnlk0")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 577.0
offset_top = 3.0
offset_right = 1149.0
offset_bottom = 495.0
grow_horizontal = 0
current_tab = 0

[node name="Image" type="Panel" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VSplitContainer" type="VSplitContainer" parent="TabContainer/Image"]
layout_mode = 0
offset_left = 25.0
offset_top = 225.0
offset_right = 268.0
offset_bottom = 357.0

[node name="OptionButton" type="OptionButton" parent="TabContainer/Image/VSplitContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="TabContainer/Image"]
layout_mode = 0
offset_left = 323.0
offset_top = 259.0
offset_right = 525.0
offset_bottom = 310.0
text = "GENERATE"
script = SubResource("GDScript_bgg2j")

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Image"]
layout_mode = 0
offset_left = 25.0
offset_top = 17.0
offset_right = 541.0
offset_bottom = 214.0
bbcode_enabled = true
text = "Using below controls you can generate [i]TileMap[/i] on basis of PNG representation of the map, using [b]grid-forge[/b]'s [i]GridMap2D[/i] as an intermediate.

Choose one of the provided PNGs to generate the tilemap.

Resulting [i]TileMap[/i] will have spaces between the tiles, to show the borders between tiles. "

[node name="Generate" type="Panel" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Size" type="VBoxContainer" parent="TabContainer/Generate"]
layout_mode = 1
offset_left = 37.0
offset_top = 137.0
offset_right = 293.0
offset_bottom = 207.0
alignment = 1

[node name="Width" parent="TabContainer/Generate/Size" instance=ExtResource("4_s24k0")]
layout_mode = 2
min_value = 5
max_value = 50

[node name="Height" parent="TabContainer/Generate/Size" instance=ExtResource("4_s24k0")]
layout_mode = 2
label_text = "Height"
min_value = 5
max_value = 50

[node name="SizeButton" type="Button" parent="TabContainer/Generate"]
layout_mode = 0
offset_left = 351.0
offset_top = 145.0
offset_right = 536.0
offset_bottom = 199.0
text = "Accept size and 
clear map"

[node name="Rules" type="OptionButton" parent="TabContainer/Generate"]
layout_mode = 0
offset_left = 351.0
offset_top = 206.0
offset_right = 539.0
offset_bottom = 247.0
item_count = 2
popup/item_0/text = "Border Adjacency"
popup/item_1/text = "Identity Adjacency"
popup/item_1/id = 1

[node name="Queue" type="OptionButton" parent="TabContainer/Generate"]
layout_mode = 0
offset_left = 352.0
offset_top = 250.0
offset_right = 541.0
offset_bottom = 297.0
item_count = 2
popup/item_0/text = "PositionQueue"
popup/item_1/text = "EntrophyQueue"
popup/item_1/id = 1

[node name="GenerateButton" type="Button" parent="TabContainer/Generate"]
layout_mode = 0
offset_left = 86.0
offset_top = 388.0
offset_right = 270.0
offset_bottom = 455.0
text = "Generate"

[node name="HistoryButton" type="Button" parent="TabContainer/Generate"]
layout_mode = 0
offset_left = 327.0
offset_top = 389.0
offset_right = 511.0
offset_bottom = 456.0
disabled = true
text = "Show process"

[node name="RuntimeError" type="Label" parent="TabContainer/Generate"]
layout_mode = 0
offset_left = 58.0
offset_top = 305.0
offset_right = 528.0
offset_bottom = 371.0
autowrap_mode = 2

[node name="AcceptDialog" type="AcceptDialog" parent="."]
position = Vector2i(295, 250)
size = Vector2i(550, 154)
dialog_autowrap = true

[node name="HoverCellPanel" type="Panel" parent="."]
offset_left = 580.0
offset_top = 496.0
offset_right = 1146.0
offset_bottom = 643.0

[node name="Label" type="Label" parent="HoverCellPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 7.0
offset_right = 545.0
offset_bottom = 55.0
text = "Hover Cell Data"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AtlasCoord" type="Label" parent="HoverCellPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = 47.0
offset_right = 199.0
offset_bottom = 88.0
text = "Atlas Coordinates"
vertical_alignment = 1
script = ExtResource("5_miaey")
label = "Atlas Coordinates"

[node name="TilePos" type="Label" parent="HoverCellPanel"]
layout_mode = 0
offset_left = 21.0
offset_top = 91.0
offset_right = 198.0
offset_bottom = 132.0
text = "Atlas Coordinates"
vertical_alignment = 1
script = ExtResource("5_miaey")
label = "Tile Position"

[node name="TileGenerator" type="TileGenerator" parent="." node_paths=PackedStringArray("collection", "modal")]
collection = NodePath("../TileCollections")
modal = NodePath("../AcceptDialog")

[node name="TileCollections" type="TileCollections" parent="." node_paths=PackedStringArray("modal")]
path_to_image = "res://tiles/all_tiles.png"
tileset = ExtResource("2_sxov8")
modal = NodePath("../AcceptDialog")

[node name="GenerationHistory" parent="." node_paths=PackedStringArray("collection") instance=ExtResource("6_l7l20")]
visible = false
top_level = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1150.0
offset_bottom = 650.0
grow_horizontal = 1
grow_vertical = 1
theme = SubResource("Theme_pbcp7")
collection = NodePath("../TileCollections")

[node name="CollapsibleTilePlacer" parent="." node_paths=PackedStringArray("tilemap", "collection") instance=ExtResource("7_jppps")]
visible = false
offset_left = 12.0
offset_top = 109.0
offset_right = 676.0
offset_bottom = 541.0
tilemap = NodePath("../TileMapContainer/TileMap")
collection = NodePath("../TileCollections")

[connection signal="collapsible_clicked" from="TileMapContainer/TileMap" to="." method="_on_tile_map_collapsible_clicked"]
[connection signal="node_hovered" from="TileMapContainer/TileMap" to="." method="_on_tile_map_node_hovered"]
[connection signal="tab_changed" from="TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="TabContainer/Image/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TabContainer/Generate/SizeButton" to="." method="_on_size_button_pressed"]
[connection signal="pressed" from="TabContainer/Generate/GenerateButton" to="." method="_on_button_pressed_gen"]
[connection signal="pressed" from="TabContainer/Generate/HistoryButton" to="." method="_on_history_button_pressed"]
[connection signal="generation_error" from="TileGenerator" to="." method="_on_tile_generator_generation_error"]
[connection signal="generation_finished" from="TileGenerator" to="." method="_on_tile_generator_generation_finished"]
[connection signal="generation_runtime_error" from="TileGenerator" to="." method="_on_tile_generator_generation_runtime_error"]
[connection signal="panel_quitted" from="CollapsibleTilePlacer" to="." method="_on_collapsible_tile_placer_panel_quitted"]
